--- a/inex.html
+++ b/inex.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<h1>hallo git</h1>
-<h2>modify</h2>
-<h3>aghil project</h3>
+<h1>header</h1>
 </body>
 </html>
