--- a/inex.html
+++ b/inex.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<h1>header</h1>
+    <div class="wrapper">
+        <h1>Stoppuhr</h1>
+        <p><span id="seconds">00</span>:<span id="tens">00</span></p>
+        <button id="button-start">start</button>
+        <button id="button-stop">stop</button>
+        <button id="button-reset">reset</button>
+        </div> 
+
+        <script src="mein.js"></script>
 </body>
 </html>
