modal works better

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <img src="./foto/josiah-farrow-ucuOscdCaO4-unsplash.jpg"
+    <img src="./images/josiah-farrow-ucuOscdCaO4-unsplash.jpg"
          alt=""
          class="avatar">
     <button class="open">truck document</button>
@@ -21,13 +21,13 @@
         <div class="modal">
             <h1>Kontakt</h1>
             <img class="document"
-                 src="./foto/maksym-kaharlytskyi-Q9y3LRuuxmg-unsplash.jpg"
+                 src="./images/maksym-kaharlytskyi-Q9y3LRuuxmg-unsplash.jpg"
                  alt="">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio labore officiis dicta! Id numquam quod
                 omnis, deserunt consequatur maxime perferendis cupiditate cumque nostrum iusto optio unde harum et nam
                 eveniet itaque esse mollitia neque natus sint, quos repellendus hic. Molestiae tempore commodi rerum ea
                 quibusdam dicta impedit quod totam dolorem.</p>
-            <h2>tell:01763252314</h2>
+            <h2>tel: 01763252314</h2>
             <button class="close-btn">Abbrechen</button>
         </div>
 
